dc-reg-ida/kubernetes/ida-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ida-live-plugin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ida-live-plugin
  template:
    metadata:
      name: ida-live-plugin
      labels:
        app: ida-live-plugin
    spec:
      containers:
      - name: ida-live-plugin
        image: oydeu/dc-decida:latest
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: ida-live-plugin
spec:
  selector:
    app: ida-live-plugin
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ida-live-plugin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - idaustria.dec112.eu
    secretName: ida-live-plugin-tls
  rules:
  - host: idaustria.dec112.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ida-live-plugin
            port:
              number: 80
